@@ -10,6 +10,14 @@
       <li>
         <%= link_to '<i class="fas fa-pencil-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path %>
       </li>
+      <% if current_user.alternative_accounts.any? %>
+      <li>
+        <a href="<%= edit_switch_user_path %>">
+          <i class="fas fa-sign-in" aria-hidden="true">&nbsp;</i>
+          Switch user
+        </a>
+      </li>
+      <% end %>
       <li>
         <%= link_to '<i class="fas fa-sign-in" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete %>
       </li>
