@@ -5,10 +5,10 @@ Rails.application.routes.draw do
   get "selectable_user/edit", controller: "ugent/selectable_user", action: :edit, as: :edit_selectable_user
   post "selectable_user", controller: "ugent/selectable_user", action: :update, as: :update_selectable_user
 
-=begin TODO
-  get "switch_user/edit", :controller => :switch_user, :action => :edit, :as => :edit_switch_user
-  post "switch_user", :controller => :switch_user, :action => :update, :as => :update_switch_user
+  get "switch_user/edit", controller: "ugent/switch_user", action: :edit, as: :edit_switch_user
+  post "switch_user", controller: "ugent/switch_user", action: :update, as: :update_switch_user
 
+=begin TODO
   get "/internal/exports/v01/organisations/:organisation/:name.json",
     :to => "internal/exports#show_link",
     :organisation => /[a-zA-Z0-9_\-]+/,
